force-app/main/default/objects/AcctPlanActivity__c/AcctPlanActivity__c.object-meta.xml
<CustomObject>
    <label>Account Plan Activity</label>
    <nameField>
        <displayFormat>Act-{000000}</displayFormat>
        <label>Account Plan Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>