force-app/main/default/objects/AcctPlanActivity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plan Activity</relationshipLabel>
    <relationshipName>Account_Plan_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>