force-app/main/default/objects/AcctPlanActivity__c/fields/AccountPlanActionPlanID__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanActionPlanID__c</fullName>
    <label>AccountPlanActionPlan</label>
    <referenceTo>AcctPlanActionPlan__c</referenceTo>
    <relationshipLabel>Account Plan Activity</relationshipLabel>
    <relationshipName>Account_Plan_Activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>