force-app/main/default/objects/AcctPlanActivity__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <description>Action Plan Activity Detail. (Please note that this field will be displayed in Executive Summary) 
ข้อมูล Activity จะถูกนำไปแสดงใน Executive Summary</description>
    <inlineHelpText>Action Plan Activity Detail. (Please note that this field will be displayed in Executive Summary) 
ข้อมูล Activity จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>Activities</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Work on negative relationship</fullName>
            </value>
            <value>
                <fullName>Work on positive relationship</fullName>
            </value>
            <value>
                <fullName>Event activity</fullName>
            </value>
            <value>
                <fullName>Top Management visit</fullName>
            </value>
            <value>
                <fullName>Signing ceremony</fullName>
            </value>
            <value>
                <fullName>Economic update</fullName>
            </value>
            <value>
                <fullName>FX market update</fullName>
            </value>
            <value>
                <fullName>Request information from Analytic team</fullName>
            </value>
            <value>
                <fullName>Request information from customer</fullName>
            </value>
            <value>
                <fullName>Realign credit facility</fullName>
            </value>
            <value>
                <fullName>New credit limit</fullName>
            </value>
            <value>
                <fullName>Request product to prepare picthing doc</fullName>
            </value>
            <value>
                <fullName>Rehearsal to pitching deal</fullName>
            </value>
            <value>
                <fullName>Ask product to arrange for meeting with related party</fullName>
            </value>
            <value>
                <fullName>MM role 1 explain customer for first transaction</fullName>
            </value>
            <value>
                <fullName>Contact relevant parties to prepare for first transaction</fullName>
            </value>
            <value>
                <fullName>Contact relevant parties to solve existing process</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>