force-app/main/default/objects/AcctPlanActivity__c/fields/CheckOther__c.field-meta.xml
<CustomField>
    <fullName>CheckOther__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckOther</label>
    <length>1</length>
    <type>Text</type>
</CustomField>