force-app/main/default/objects/AcctPlanActivity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date to perform an activity.  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Date  จะถูกนำไปแสดงใน Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date to perform an activity.  (Please note that this field will be displayed in Executive Summary)
ข้อมูล Date  จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>