force-app/main/default/objects/AcctPlanActivity__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Group</description>
    <inlineHelpText>Group</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Group 1 Relationship</fullName>
            </value>
            <value>
                <fullName>Group 2 Information update to customer</fullName>
            </value>
            <value>
                <fullName>Group 3 Collect information</fullName>
            </value>
            <value>
                <fullName>Group 4 Credit Preparation</fullName>
            </value>
            <value>
                <fullName>Group 5 Pitching Doc preparation and presentation</fullName>
            </value>
            <value>
                <fullName>Group 6 System design</fullName>
            </value>
            <value>
                <fullName>Group 7 Others</fullName>
            </value>
            <value>
                <fullName>Group 3 First transaction handholding</fullName>
            </value>
            <value>
                <fullName>Group 3 Solve customers problem</fullName>
            </value>
            <value>
                <fullName>Group 4 Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>