force-app/main/default/objects/AcctPlanActivity__c/fields/isBook__c.field-meta.xml
<CustomField>
    <fullName>isBook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBook</label>
    <type>Checkbox</type>
</CustomField>