force-app/main/default/objects/AcctPlanActivity__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Increase Utilization</fullName>
            </value>
            <value>
                <fullName>Cross sell New to products</fullName>
            </value>
            <value>
                <fullName>Acquire New customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>