force-app/main/default/objects/AcctPlanActivity__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Other Activity, in case User has select &quot;&quot;Other Groups&quot;&quot;. (Please note that this field will be displayed in Executive Summary)
ข้อมูล Other Activity จะถูกนำไปแสดงใน Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Activity, in case User has select &quot;&quot;Other Groups&quot;&quot;. (Please note that this field will be displayed in Executive Summary)
ข้อมูล Other Activity จะถูกนำไปแสดงใน Executive Summary</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>