force-app/main/default/objects/AcctPlanActivity__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <description>Task/Visit Report Record ID - after user has converted the selected activity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Task/Visit Report Record ID - after user has converted the selected activity</inlineHelpText>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>