force-app/main/default/objects/AcctPlanActivity__c/fields/Visit_Plan_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Task/Visit Report Record ID - after user has converted the selected activity</description>
    <inlineHelpText>Task/Visit Report Record ID - after user has converted the selected activity</inlineHelpText>
    <label>Visit Plan / Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Account Plan Activity</relationshipLabel>
    <relationshipName>Account_Plan_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>